kafka/cluster-kafka/02-ingress-kafka.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kafka
  namespace: kafka
spec:
  ingressClassName: nginx
  rules:
  - host: kafka-10-1-1-160.traefik.me
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kafka-cluster-kafka-bootstrap
            port:
              number: 9092
